--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="chatBot">
+            <div class="chatBot_Title">
+                <h2>SMIT Registration ChatBot</h2>
+            </div>
+            <div class="dispalyChat">
+                <ul id="display"></ul>
+            </div>
+            <div class="inputMessage">
+                <input type="text" id="input" onkeypress="message()" placeholder="Type meassage">
+            </div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
