--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
             <div class="chatBot_Title">
                 <h2>SMIT Registration ChatBot</h2>
             </div>
-            <div class="dispalyChat">
-                <ul id="display"></ul>
+            <div class="displayChat">
+                <div id="display"></div>
+                <p id="typing" style="color: rgb(34, 144, 1); margin-left: 10px; margin-top: 10px; display: none;">Typing...</p>
             </div>
             <div class="inputMessage">
                 <input type="text" id="input" onkeypress="message()" placeholder="Type meassage">
