--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <body>
     <div class="container">
         <div class="chatBot">
-            <div class="chatBot_Title">
-                <h2>SMIT Registration ChatBot</h2>
+            <div class="chatBot_header">
+                <div class="smitlogo">
+                    <img src="smit_logo.jpg" alt="" width="80px">
+                </div>
+                <div class="title">
+                    <h4>SMIT Admission Guider</h4>
+                    <p id="typing" style="color: #90c21a; text-align: left; visibility: hidden;">Typing...</p>
+                </div>
             </div>
             <div class="displayChat">
                 <div id="display"></div>
-                <p id="typing" style="color: rgb(34, 144, 1); margin-left: 10px; margin-top: 10px; display: none;">Typing...</p>
             </div>
             <div class="inputMessage">
                 <input type="text" id="input" onkeypress="message()" placeholder="Type meassage">
